feat: added solutin animation display with websocket data